kubernetes/security/authentik/authentik.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-postgres
  namespace: security
  labels:
    app: authentik
    component: postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: authentik
      component: postgres
  template:
    metadata:
      labels:
        app: authentik
        component: postgres
    spec:
      priorityClassName: security-priority
      containers:
      - name: postgres
        image: postgres:16
        imagePullPolicy: IfNotPresent
        ports:
        - name: postgres
          containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 200m
            memory: 512Mi
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: authentik-postgres-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-server
  namespace: security
  labels:
    app: authentik
    component: server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: authentik
      component: server
  template:
    metadata:
      labels:
        app: authentik
        component: server
    spec:
      priorityClassName: security-priority
      containers:
      - name: server
        image: ghcr.io/goauthentik/server:2026.8.3
        imagePullPolicy: IfNotPresent
        args: ["server"]
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 1Gi
        ports:
        - name: http
          containerPort: 9000
        volumeMounts:
        - name: data
          mountPath: /data
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: authentik-media
      - name: tmp
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
  namespace: security
  labels:
    app: authentik
    component: worker
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: authentik
      component: worker
  template:
    metadata:
      labels:
        app: authentik
        component: worker
    spec:
      priorityClassName: security-priority
      containers:
      - name: worker
        image: ghcr.io/goauthentik/server:2026.8.3
        imagePullPolicy: IfNotPresent
        args: ["worker"]
        volumeMounts:
        - name: data
          mountPath: /data
        - name: tmp
          mountPath: /tmp
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 400m
            memory: 512Mi
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: authentik-media
      - name: tmp
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-postgres
  namespace: security
  labels:
    app: authentik
    component: postgres
spec:
  selector:
    app: authentik
    component: postgres
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: authentik
  namespace: security
  labels:
    app: authentik
    component: server
spec:
  selector:
    app: authentik
    component: server
  ports:
  - name: http
    port: 9000
    targetPort: 9000
# ---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: authentik-bas
#   namespace: security
# spec:
#   issuerRef:
#     name: la1r
#     kind: ClusterIssuer
#   secretName: authentik-bas-tls
#   commonName: authentik.bas
#   dnsNames:
#   - authentik.bas
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: authentik-https
#   namespace: security
#   annotations:
#     traefik.ingress.kubernetes.io/router.tls: "true"
#     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
#     # traefik.ingress.kubernetes.io/router.middlewares: "security-sablier-authentik@kubernetescrd"
# spec:
#   ingressClassName: lan
#   tls:
#   - secretName: authentik-bas-tls
#     hosts:
#     - authentik.bas
#   rules:
#   - host: authentik.bas
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: authentik
#             port:
#               number: 9000
#   - host: kubernetes.bas
#     http:
#       paths:
#       - path: /outpost.goauthentik.io
#         pathType: Prefix
#         backend:
#           service:
#             name: authentik
#             port:
#               number: 9000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: letsencrypt-authentik-https
  namespace: security
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # traefik.ingress.kubernetes.io/router.middlewares: "security-sablier-authentik@kubernetescrd"
spec:
  ingressClassName: lan
  tls:
  - secretName: letsencrypt-authentik-bas-tls
    hosts:
    - auth.la1r.com
  rules:
  - host: auth.la1r.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik
            port:
              number: 9000
